@@ -99,5 +99,28 @@ TEST(files_are_cloned_according_to_tree_structure)
 	assert_success(rmdir(SANDBOX_PATH "/dir"));
 }
 
+TEST(cloning_does_not_work_in_custom_view)
+{
+	char *names[] = { "a-clone" };
+
+	create_empty_file(SANDBOX_PATH "/do-not-clone-me");
+
+	flist_custom_start(&lwin, "test");
+	flist_custom_add(&lwin, SANDBOX_PATH "/do-not-clone-me");
+	assert_true(flist_custom_finish(&lwin, 0, 0) == 0);
+
+	/* Without specifying new name. */
+	lwin.dir_entry[0].marked = 1;
+	(void)clone_files(&lwin, NULL, 0, 0, 1);
+	assert_failure(unlink(SANDBOX_PATH "/do-not-clone-me(1)"));
+
+	/* With name specified. */
+	lwin.dir_entry[0].marked = 1;
+	(void)clone_files(&lwin, names, 1, 0, 1);
+	assert_failure(unlink(SANDBOX_PATH "/a-clone"));
+
+	assert_success(unlink(SANDBOX_PATH "/do-not-clone-me"));
+}
+
 /* vim: set tabstop=2 softtabstop=2 shiftwidth=2 noexpandtab cinoptions-=(0 : */
 /* vim: set cinoptions+=t0 : */
